------------------------------------------------------------------------
0.0200  UNRELEASED      Piotr Roszatycki <dexter@cpan.org>

* New API based on JSON is supported.

------------------------------------------------------------------------
0.0101  2013-07-15      Piotr Roszatycki <dexter@cpan.org>

* Changed URL to http://www.geocodefarm.com/geo.php

------------------------------------------------------------------------
0.0100  2013-07-09      Piotr Roszatycki <dexter@cpan.org>

* First CPAN release.

------------------------------------------------------------------------