@@ -2,6 +2,7 @@
 0.0200  UNRELEASED      Piotr Roszatycki <dexter@cpan.org>
 
 * New API based on JSON is supported.
+* New method for reverse geocoding.
 
 ------------------------------------------------------------------------
 0.0101  2013-07-15      Piotr Roszatycki <dexter@cpan.org>
